<resources>
    <string name="app_name">Restaurants</string>
    <string name="title_activity_map">Map</string>
    <string name="title1">Restaurantes</string>
    <string name="txt_ListarR">Restaurantes</string>
    <string name="restaurants">Restaurants</string>
    <string name="titulo_buscar">Buscar restaurantes</string>
    <string name="tc">Tipo Comida</string>
    <string name="pc">Precio Comida</string>
    <string name="ur">Ubicación Resturante</string>
    <string name="nr">Nombre Restaurante</string>
    <string name="ce">Cantidad de estrellas</string>
    <string name="bb">BUSCAR</string>
    <string-array name="prices">
        <item> </item>
        <item>CHEAP</item>
        <item>AFFORDABLE</item>
        <item>EXPENSIVE</item>
    </string-array>

    <string-array name="categories">
        <item> </item>
        <item>FAST FOOD</item>
        <item>GOURMET</item>
        <item>CAFE</item>
    </string-array>

    <string-array name="stars">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>


    </string-array>


</resources>
